# raccoon

./: .clang-tidy  .codespellrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE.md  README.md  README_8md.html  TODO.org  Taskfile.yml  about.html  about_8dox.html  annotated.html  base_8cpp.html  base_8hpp.html  classraccoon_1_1storage_1_1DataProcessor.html  classraccoon_1_1storage_1_1OrderbookProcessor.html  classraccoon_1_1storage_1_1TradeProcessor.html  classraccoon_1_1web_1_1Connection.html  classraccoon_1_1web_1_1Session.html  classraccoon_1_1web_1_1WebSocketConnection.html  common_8hpp.html  conanfile.py  connections_8hpp.html  dir_0d4dde2834ed44e47b6207c19e4aac26.html  dir_0e1b2edcf804953148cdeb41fd4806cd.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_452baf35e1d7639c9f2a5ece4ec85855.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  logging_8cpp.html  logging_8hpp.html  main_8cpp.html  modules.html  namespaceglz.html  (+35 more)
.github/: CODEOWNERS
.github/workflows/: ci.yml  status-embed.yml
cmake/: dev-mode.cmake  functions.cmake  install-rules.cmake  variables.cmake
scripts/: check_proxy.sh  check_redis.sh
src/: common.hpp  config.h  config.h.in  lib.cpp  logging.cpp  logging.hpp  main.cpp  web.cpp  web.hpp
src/storage/: orderbook.cpp  orderbook.hpp  processing.cpp  processing.hpp  product_tracker.hpp  storage.hpp  trades.cpp  trades.hpp
src/utils/: utils.cpp  utils.hpp  web.cpp  web.hpp
src/web/: manager.cpp  manager.hpp  session.cpp  session.hpp  web.hpp  ws.cpp  ws.hpp
src/web/connections/: base.cpp  base.hpp  connections.hpp  ws.cpp  ws.hpp
test/: CMakeLists.txt
test/src/: raccoon_test.cpp
